Cosmetic refactoring